# dimq

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
dimq_load_task/: Cargo.toml  README.md  pyproject.toml
dimq_load_task/src/: lib.rs
docs/: initial_coding_session.txt
docs/plans/: 2026-03-04-dimq-design.md  2026-03-04-dimq-implementation.md  2026-03-06-e2e-docker-test-design.md  2026-03-06-e2e-docker-test-implementation.md
docs/releases/: v0.1.2.md  v0.1.3.md
e2e/: config.yaml
load_task/: Cargo.toml  pyproject.toml
load_task/src/: lib.rs
src/dimq/: adaptive.py  cli.py  config.py  models.py  orchestrator.py  task.py  worker.py
src/dimq/tasks/: load.py
tests/: sample_tasks.py  test_adaptive.py  test_config.py  test_e2e_docker.py  test_integration.py  test_load_task.py  test_models.py  test_orchestrator.py  test_task.py  test_tasks_load.py  test_worker.py
