[project]
name = "dimq"
version = "0.1.0"
description = "Distributed In-Memory Queue"
requires-python = ">=3.12"
dependencies = [
    "pyzmq>=26.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "structlog>=24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-timeout>=2.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dimq"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
