[project]
name = "dimq"
dynamic = ["version"]
description = "Distributed In-Memory Queue"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "Walnut Geek", email = "wg@walnutgeek.com" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "pyzmq>=26.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "structlog>=24.0",
]

[project.urls]
Homepage = "https://github.com/walnutgeek/dimq"
Repository = "https://github.com/walnutgeek/dimq"

[project.scripts]
dimq = "dimq.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-timeout>=2.3",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"
tag-pattern = "v(?P<version>.*)"

[tool.hatch.build.hooks.vcs]
version-file = "src/dimq/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/dimq"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "e2e: end-to-end Docker tests (require Docker daemon)",
]
