[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "dimq-load-task"
version = "0.0.1"
description = "Rust-powered load generation task for DIMQ"
readme = "../README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "Walnut Geek", email = "wg@walnutgeek.com" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "License :: OSI Approved :: MIT License",
]

[project.urls]
Homepage = "https://github.com/walnutgeek/dimq"
Repository = "https://github.com/walnutgeek/dimq"

[tool.maturin]
features = ["pyo3/extension-module"]
